Changes in 2.0.31:
  o Client Changes:
    * addMetadataItems() automatically creates digests
    * MetadataItem.freeze() no longer creates metadata digests

  o Server Changes:
    * Hide extended metadata from old clients (CNY-3050)
    * addMetadataItems() now rejects metadata items which don't have digests

Changes in 2.0.30:
  o Internal Changes:
    * Refactored the code used for cvc diff and cvc rdiff to provide
      an internal iterator interface that does not directly print
      output, for rBuild. (CNY-3043)

  o Bug Fixes:
    * On multiarch systems, a repository query for all versions of a trove
      could prefer an x86 troves over a multiarch trove, if the x86 flavor
      scored higher against the system flavor (CNY-3041)
    * Conary would unpack 64 bit integers incorrectly on platforms where
      long was 64 bits instead of 32 (CNY-3042)
    * Conary unpacked 16 bit values by treating them as 32 bit values,
      which broke on big endian machines (CNY-3042)
    * Disallow empty trove names and component names
    * Metadata now allows new types to be added, and key/value metadata
      is a new type. Without this troves with key/data metadata attached
      were unuseable by older versions of conary (CNY-3040).
    * Added a new signature type which includes new metadata types.
    * Made Trove.verifyDigests() verify signatures of metadata.
    * A bug that caused python dependencies to not be discovered when
      using alternate versions of python has been fixed (CNY-3029).

Changes in 2.0.29:
  o New Features:
    * cvc diff now optionally takes a set of files to diff.  Note that
      providing a revision now requires the --revision argument, to
      differentiate revisions from files. (CNY-2384)
    * Added --build-log and --show-file parameters to conary rq. (CNY-2584)
    * Group, Fileset, and Redirect recipes now check and record build 
      requirements. (CNY-3016)

  o Client Changes: